# yadngd

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
R/: extendr-wrappers.R
man/: yadngd.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: graphic_device.rs  lib.rs
